# ISEP_A3-vulnerable_dummy_website

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/www/: api.rs  static.rs
static/: header.html.hbs  index.css  index.html.hbs  profile.html.hbs  sign.css  sign.html
static/articles/: first.html.hbs
static/articles/foo-101/: part-1.html.hbs  part-2.html.hbs
